[package]
name = "hyperion-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
arcstr.workspace = true
crossbeam.workspace = true
spin.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-cpu-id.path = "../cpu-id"
hyperion-futures.path = "../futures"
hyperion-mem.path = "../mem"
hyperion-sync.path = "../sync"

[lints]
workspace = true
